# minimal_example_consumer

./: CMakeLists.txt  conanfile.txt  main.cpp
